# GraphClass

./: .gitignore  CMakeLists.txt  README.md
src/: EdgeIterator.cpp  EdgeIterator.h  SimpleGraph.cpp  SimpleGraph.h  Task2.cpp  Task2.h  Task3.cpp  Task3.h  VertexIterator.cpp  VertexIterator.h  main.cpp
src/elements/: Edge.cpp  Edge.h  Vertex.cpp  Vertex.h
src/forms/: GraphForm.cpp  GraphForm.h  LGraph.cpp  LGraph.h  MGraph.cpp  MGraph.h
src/iterators/: EdgeIterator.cpp  EdgeIterator.h  VertexIterator.cpp  VertexIterator.h
src/menu/: menu.cpp  menu.h
